EmptyViewPod & SearchResultActivity ( no complete )

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,8 @@
         </activity>
 
         <activity android:name=".activities.SearchActivity" />
+
+        <activity android:name=".activities.SearchResultActivity" />
     </application>
 
 </manifest>
