--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,10 @@ dependencies {
     implementation "android.arch.lifecycle:extensions:1.1.0"
     implementation "android.arch.lifecycle:viewmodel:1.1.0"
     implementation "android.arch.lifecycle:livedata:1.1.0"
+    annotationProcessor "android.arch.lifecycle:compiler:1.1.0"
+
+    implementation 'com.squareup.retrofit2:retrofit:2.3.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
