--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,12 @@ dependencies {
 
     implementation 'com.squareup.retrofit2:retrofit:2.3.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
+    compile 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
+
+    compile 'com.squareup.okhttp3:okhttp:3.9.1'
+
+    compile "io.reactivex.rxjava2:rxjava:2.1.9"
+    compile group: 'io.reactivex.rxjava2', name: 'rxjava', version: '2.1.9'
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
