--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,6 +46,10 @@ dependencies {
 
     compile "io.reactivex.rxjava2:rxjava:2.1.9"
     compile group: 'io.reactivex.rxjava2', name: 'rxjava', version: '2.1.9'
+    compile 'io.reactivex.rxjava2:rxandroid:2.0.0'
+
+    implementation 'com.github.bumptech.glide:glide:4.4.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.4.0'
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
